main section about commit

--- a/index.html
+++ b/index.html
@@ -36,5 +36,15 @@
       </div>
     </div>
   </header>
+  <main class="pd-x">
+    <section id="about">
+      <span>Sobre nós</span>
+      <h1>Por que somos diferentes?</h1>
+      <p>
+        Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de
+        todo o mundo a se concentrarem naquilo que é realmente importante para elas.
+      </p>
+    </section>
+  </main>
 </body>
 </html>
